--- a/src/views/events.html
+++ b/src/views/events.html
@@ -11,7 +11,7 @@
         <div class="col-xl-9 col-md-7 col-sm-7 col-6">
         {% for event in events %}
           <div class="card flex-md-row mb-4 box-shadow h-md-250 cards">
-          <img class="card-img-right flex-auto d-none d-lg-block mr-2" data-src="" alt="" style="width: 250px; height: 400px;" src="/file/{{event.img}}" data-holder-rendered="true">
+          <img class="card-img-right  d-none d-lg-block mr-2" data-src="" alt="" style="width: 230px;     height: 100%;" src="/file/{{event.img}}" data-holder-rendered="true">
               <div class="card-body d-flex flex-column align-items-start">
                 <h3 class="mb-0">
                   <img src="/img/event.png">
