--- a/src/views/logPage.html
+++ b/src/views/logPage.html
@@ -21,6 +21,13 @@
             </center>
         </div>
         {% endif %}
+        {% if (alert == 'logged') %}
+        <div class="alert alert-dark" role="alert">
+                <center>
+            Вы успешно авторизовались!
+            </center>
+        </div>
+        {% endif %}
         {% if (alert == 'email') %}
         <div class="alert alert-dark" role="alert">
                 <center>
