--- a/src/views/personmap.html
+++ b/src/views/personmap.html
@@ -7,8 +7,20 @@
 {% include "templates/pageTopMenu.html" %}
 <hr>
     <div class="content row">
-        <div class="result-search col-xl-9 col-md-9 col-sm-9 col-12 text-center">
-            <p>Карта заинтересованных стороне появится на сайте в блажйшее время.</p>
+        <div class="result-search col-xl-9 col-md-9 col-sm-9 col-12 ">
+            <br>
+            <center><h4>Карта заинтересованных сторон</h4></center>
+            <br>
+            <p>Инжиниринговый дивизион формирует партнерские и взаимовыгодные отношения с заинтересованными сторонами, и в постоянном  режиме анализирует свое стейхолдерское окружение.
+                </p><p>В рамках актуализации Карты заинтересованных сторон топ-менеджмент дивизиона один раз в два года проводит ранжирование групп заинтересованных сторон по двум критериям: по степени влияния группы  на Компанию и, наоборот, по степени влияния Компании на группу.
+               </p><p>По результатам оценки, проведенной в августе 2018 года, позиции на карте ряда групп изменились.  Также появились новые группы заинтересованных сторон,  что обусловлено увеличением масштаба компании в связи со становлением Инжинирингового дивизиона,и усилением его позиций на глобальном атомном рынке. Новые группы стейкхолдеров: государственные органы власти зарубежных стран; топ-менеджмент дочерних организаций; потребители технологий, продукции и услуг на мировом и на российском рынках; конкуренты на мировом рынке технологий, продукции и услуг; экологические организации; рейтинговые агентства, аналитики рынка; экспертное и профессиональное сообщество. 
+               </p>
+            <br>
+            <center><img width="95%" src="/img/zsmap.png"></center>
+            <br>
+            <p>
+            Взаимодействие с заинтересованными сторонами осуществляется во всех регионах присутствия дивизиона. Работа со стейкхолдерами ведется в форме рабочих встреч, диалогов, форумов, конференций, выставок, круглых столов и пресс-туров на атомные станции.
+            </p><p>В таблице ниже указаны интересы ключевых групп заинтересованных сторон и способы взаимодействия с ними. </p>
         </div>
         {% include "templates/sideMenuTemplate.html" %}
     </div>
