--- a/src/views/personmap.html
+++ b/src/views/personmap.html
@@ -21,6 +21,37 @@
             <p>
             Взаимодействие с заинтересованными сторонами осуществляется во всех регионах присутствия дивизиона. Работа со стейкхолдерами ведется в форме рабочих встреч, диалогов, форумов, конференций, выставок, круглых столов и пресс-туров на атомные станции.
             </p><p>В таблице ниже указаны интересы ключевых групп заинтересованных сторон и способы взаимодействия с ними. </p>
+            <br>
+            <div style="overflow-x: auto">
+            <table class="table" style="width:auto">
+                <thead>
+                    <tr>
+                        <th>
+                            Ключевые заинтересованные стороны 
+                        </th>
+                        <th>
+                            Основные интересы
+                        </th>
+                        <th>
+                            Способы взаимодействия 
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                                Акционеры: Госкорпорация «Росатом», АО «Атомэнергопроект», АО АСЭ.
+                        </td>
+                        <td>
+                                Реализация стратегии. Экономическая эффективность. Устойчивость бизнеса. Прозрачность бизнес-процессов.
+                        </td>
+                        <td>
+                                Участие в реализации стратегических целей акционера. Совершенствование Системы корпоративного управления. Внедрение «Производственной системы «Росатом». Выполнение КПЭ
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
         </div>
         {% include "templates/sideMenuTemplate.html" %}
     </div>
