--- a/src/views/SurveyForAdmin.html
+++ b/src/views/SurveyForAdmin.html
@@ -28,7 +28,7 @@
         <br>
         <form  method="POST" enctype="multipart/form-data">
             <p>прикрепить файл: <input name="file_an" type="file"> добавить аннотацию: <input type="text" name="text_an" ></p>
-            <p><input type="submit"></p>
+            <p><button type="submit">Добавить</button> <a href="/createsurvey/res/{{id}}/csv">скачать результаты csv</a></p>
         </form>
            <div class="container res">{{response}}</div>
 
