--- a/src/views/instruction.html
+++ b/src/views/instruction.html
@@ -19,7 +19,7 @@
                         <li><b>Для того чтобы принять участие в «Активном опросе»:</b><br>
                             <ul>
                                 <li><p><b>Шаг №1. </b>Кликните на название опроса. Вы перейдете к электронной анкете. </p></li>
-                                <li><p>Шаг №2. </b>Оветьте на вопросы в соответствии с инструкцией, которая будет продолжена в начале опроса. Вы можете прерваться в заполнении опроса, выйти из личного кабинета, вернуться в него и продолжить заполнения анкеты</p></li>
+                                <li><p><b>Шаг №2. </b>Оветьте на вопросы в соответствии с инструкцией, которая будет продолжена в начале опроса. Вы можете прерваться в заполнении опроса, выйти из личного кабинета, вернуться в него и продолжить заполнения анкеты</p></li>
                                 <li><p><b>Шаг №3. </b>После завершения заполнения анкеты кликните на кнопку «Отправить».</p></li>
                                 <li><p><b>Внимание. </b>Вы можете заполнить анкету только единожды. При попытке повторного заполнения вопросы анкеты будут неактивны. </p></li>
                             </ul>
@@ -43,7 +43,16 @@
                                 
                             </ul> 
                             <p><b>Внимание. </b>Вы можете заполнить анкету только единожды. При попытке повторного заполнения вопросы анкеты будут неактивны. </p>
-                    
+                    <b>Справа в личном кабинете находится зона с мероприятиями.</b>
+                    <p style="text-indent:35px">В этой зоне располагаются Ваши приглашения на мероприятия Компании.</p>
+                    <ul>
+                            <li><p> Рядом с названием мероприятия указана дата, время и город его проведения. </p> </li>
+                            <li><p> Для того чтобы перейти на отдельную страницу с аннотацией мероприятия кликните на название мероприятие. Там вы найдете более подробную информацию о мероприятии, точный адрес его проведения, процедуру прохождения на территорию и т.п. </p> </li>
+                            <li><p> Вы можете подтвердить свое участие на мероприятии, нажав кнопку «Подтвердить», или отказать – нажав кнопку «Отказаться». </p> </li>
+                    </ul>
+                    <p><b>Внимание. </b>В низу правого меню в  личном кабинете находится кнопка Обратная связь. 
+                        Нажав на нее, Вы сможете отправить администратору платформы свои предложения по вопросам функционированию платформы и развитию публичной отчетности в целом.
+                        </p>
                 </div>
             {% else %}
             <div class="container">
