--- a/src/views/reportPage.html
+++ b/src/views/reportPage.html
@@ -11,7 +11,7 @@
         <div class="col-xl-9 col-md-7 col-sm-7 col-6">
         {% for report in parametr %}
           <div class="card flex-md-row mb-4 box-shadow h-md-250 cards">
-          <img class="card-img-right  d-none d-lg-block mr-2" data-src="" alt="" style="    width: 230px;     height: 100%;;" src="/file/{{report.imgSrc}}" data-holder-rendered="true">
+          <img class="card-img-left  d-none d-lg-block mr-2" data-src="" alt="" style="    width: 230px;     height: 100%;;" src="/file/{{report.imgSrc}}" data-holder-rendered="true">
               <div class="card-body d-flex flex-column align-items-start">
                 <h3 class="mb-0">
                   <img src="/img/reports.png">
@@ -21,7 +21,7 @@
                 <div class="mb-1 text-muted mb-auto">{{report.creatingDate}}</div>
                   <div class="container">
                     <div class="row justify-content-around">
-                        <div class="mb-2"> 
+                            <div class="mb-2 smallbox"> 
                             <h6>
                                 <img src="img/allreport.png"><a href="/file/{{ report.pdfSrc }}"> Cкачать pdf отчета на русском</a>
                             </h6>
@@ -30,23 +30,27 @@
                                 <img src="img/revards.png"><a>Победы отчета в конкурсе</a>
                                 <div class="container">
                                   <p>
-                                {{report.revards | truncate(20, true, "...")}}
+                                {{report.revards | truncate(120, true, "...")}}
                                 </p>
                                 </div>
                             </h5>
                            
                             
                           </div>   
-                          <div class="mb-2"> 
+                          <div class="mb-2 box"> 
                               <h6>
                                   <img src="img/allreport.png"><a href="/file/{{ report.pdfEngSrc }}"> Cкачать pdf отчета на английском</a>
                               </h6>
                               <br>
                               <h5>
                                   <img src="img/standarts.png"><a>Соответствие международным стандартам</a>
-                                  <div class="container">
-                                      <p><img src="img/standart1.png"><img src="img/standart2.png">{{report.standarts | truncate(20, true, "...")}}</p>
-                                  </div>
+                                  <div class="container standarts"> 
+                                      
+                                        <p><b><img src="img/standart1.png"><img src="img/standart2.png">- </b>
+                                            {{report.standarts | truncate(200, true, "...")}}</p>
+                                    </div>
+                                                                    
+                                  
                               </h5>
                               
                               
@@ -56,7 +60,7 @@
                   </div>
                   <p class="card-text mb-auto"><img src="img/reportthems.png">Приоритетные темы отчета:</p>
                   <div class="container">
-                      <span>{{report.description | truncate(100, true, "...")}}</span>
+                      <span>{{report.description | truncate(200, true, "...")}}</span>
                   </div>
                 </div>
           </div>
