--- a/src/views/personmap.html
+++ b/src/views/personmap.html
@@ -7,7 +7,7 @@
 {% include "templates/pageTopMenu.html" %}
 <hr>
     <div class="content row">
-        <div class="result-search col-xl-9 col-md-9 col-sm-9 col-12 ">
+        <div class="result-search col-xl-9 col-md-9 col-sm-9 col-12" style="overflow-y: scroll;height: 50vw;padding: 20px 0px 20px;">
             <br>
             <center><h4>Карта заинтересованных сторон</h4></center>
             <br>
@@ -22,8 +22,8 @@
             Взаимодействие с заинтересованными сторонами осуществляется во всех регионах присутствия дивизиона. Работа со стейкхолдерами ведется в форме рабочих встреч, диалогов, форумов, конференций, выставок, круглых столов и пресс-туров на атомные станции.
             </p><p>В таблице ниже указаны интересы ключевых групп заинтересованных сторон и способы взаимодействия с ними. </p>
             <br>
-            <div style="overflow-x: auto">
-            <table class="table" style="width:auto">
+            <div style="overflow-x: auto;padding-left:30px;">
+            <table class="table" style="width:95%; ">
                 <thead>
                     <tr>
                         <th>
@@ -47,6 +47,271 @@
                         </td>
                         <td>
                                 Участие в реализации стратегических целей акционера. Совершенствование Системы корпоративного управления. Внедрение «Производственной системы «Росатом». Выполнение КПЭ
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Поставщики, подрядчики.
+                        </td>
+                        <td>
+                                Получение новых заказов. Финансовое состояние Компании. 
+                                Перспективы сотрудничества.                                
+                        </td>
+                        <td>
+                                Проведение открытых тендеров. Заключение долгосрочных договоров с прозрачными правилами ценообразования. Участие в выставках и форумах. Двусторонние визиты. Формирование стратегических партнерств.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Потребители технологий, продукции и услуг на российском рынке.
+                        </td>
+                        <td>
+                                Доступ к технологиям, продукции и услугам.
+                                Развитие технологий.
+                                Повышение эффективности Компании.
+                        </td>
+                        <td>
+                                Заключение долгосрочных договоров с прозрачными правилами ценообразования. Участие в выставках и форумах. Двусторонние визиты. Формирование стратегических партнерств.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Потребители технологий, продукции и услуг на мировом рынке.
+                        </td>
+                        <td>
+                                Доступ к технологиям, продукции и услугам.
+                                Развитие технологий.
+                                Повышение эффективности Компании.
+                        </td>
+                        <td>
+                                Заключение долгосрочных договоров с прозрачными правилами ценообразования. Участие в выставках и форумах. Двусторонние визиты. Формирование стратегических партнерств.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Персонал Дивизиона и органы, представляющие его интересы:
+                                профсоюз, Совет молодых специалистов, Совет ветеранов.
+                        </td>
+                        <td>
+                                Развитие Компании. Профессиональный и карьерный рост. 
+                                Безопасные условия труда. Достойные условия вознаграждения
+                        </td>
+                        <td>
+                                Повышение квалификации персонала. 
+                                Программы кадрового резерва. 
+                                Социальная поддержка работников. 
+                                Социальное партнерство. 
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Конкуренты на мировом рынке технологий, продукции и услуг.
+                        </td>
+                        <td>
+                                Доступ к технологиям.
+                                Доступ к рынкам.
+                        </td>
+                        <td>Конкурентные отношения.</td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Органы местного самоуправления в регионах присутствия.
+                        </td>
+                        <td>
+                                Экологическая и радиационная безопасность. 
+                                Развитие инфраструктуры. Налоговые отчисления. 
+                                Создание новых рабочих мест. 
+                                Реализация социальных программ.
+                        </td>
+                        <td>
+                                Соглашения о сотрудничестве. 
+                                Социальные и благотворительные программы. 
+                                Проведение ОВОС. 
+                                Общественные приемные.
+                                Публичная отчетность.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Органы контроля и надзора: 
+                                Федеральная служба по экологическому, технологическому и атомному надзору.
+                        </td>
+                        <td>
+                                Соблюдение требований российского и международного законодательства.
+                        </td>
+                        <td>
+                                Получение лицензий. 
+                                Проведение инспекционных проверок. 
+                                Отчетность. 
+                                Разработка предложений по совершенствованию законодательства.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Государственные органы зарубежных стран.
+                        </td>
+                        <td>
+                                Соблюдение требований странового и международного законодательства.
+                        </td>
+                        <td>
+                                Получение лицензий. 
+                                Проведение инспекционных проверок. 
+                                Отчетность. 
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Международные организации и ассоциации, в т. ч. ядерного сектора:
+                                МАГАТЭ (IAEA), WANO, WNA, Агентство по атомной энергии
+                                ОЭСР.
+                        </td>
+                        <td>
+                                Развитие атомной энергетики. 
+                                Экологическая и радиационная безопасность.                                
+                        </td>
+                        <td>
+                                Международные конференции/выставки/форумы. Совместные программы.
+                                Работа в совместных комитетах, комиссиях, экспертных группах по вопросам развития атомной энергетики. 
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Экспертное и профессиональное сообщество: Торгово-промышленная палата РФ, Российский союз промышленников и предпринимателей и др.
+                        </td>
+                        <td>
+                                Перспективы сотрудничества. 
+                        </td>
+                        <td>
+                                Форумы/конференции/выставки.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Рейтинговые агентства, аналитики рынка.
+                        </td>
+                        <td>
+                                Перспективы сотрудничества. 
+                        </td>
+                        <td>
+                                Форумы/конференции/выставки.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Финансовые институты и инвестиционное сообщество. 
+                        </td>
+                        <td>
+                                Финансирование, кредитование.
+                        </td>
+                        <td>
+                                Кредитование.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Научное сообщество: 
+                                НИИ, Академия наук и др. 
+                        </td>
+                        <td>
+                                Развитие отраслевой науки. Разработка инновационных технологий. 
+                        </td>
+                        <td>
+                                Совместные программы. 
+                                Заказы на НИОКР. 
+                                Научные конференции.».
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Топ-менеджмент Дивизиона.
+                        </td>
+                        <td>
+                                Реализация стратегии Компании. 
+                        </td>
+                        <td>
+                                Совершенствование системы управления. 
+                                Программы повышения эффективности.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Топ-менеджмент ДО.
+                        </td>
+                        <td>
+                                Реализация стратегии Компании.
+                        </td>
+                        <td>
+                                Совершенствование системы управления. 
+                                Программы повышения эффективности.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Население регионов присутствия (представители общественности).
+                        </td>
+                        <td>
+                                Создание рабочих мест. 
+                                Вклады в развитие регионов присутствия.
+                        </td>
+                        <td>
+                                Общественные приемные. 
+                                Социальные и благотворительные программы. 
+                                Проведение ОВОС.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Средства массовой информации.
+                        </td>
+                        <td>
+                                Обеспечение оперативного доступа к информации о деятельности Компании.
+                        </td>
+                        <td>
+                                Пресс-конференции и пресс-туры. Публичная отчетность. 
+                                Обновление информации на сайтах, официальном блоге, ресурсах в социальных сетях.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Образовательные учреждения: НИЯУ МИФИ, НГТУ, НГСУ,
+                                НГУ им. Н.И. Лобачевского, Ивановский государственный
+                                энергетический университет и др.
+                        </td>
+                        <td>
+                                Целевая подготовка кадров. Развитие отраслевой науки. Разработка инновационных технологий.
+                        </td>
+                        <td>
+                                Подготовка, переподготовка и повышение квалификации сотрудников. 
+                                Организация студенческой практики. 
+                                Заказы на НИОКР.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Подготовка, переподготовка и повышение квалификации сотрудников. 
+                                Организация студенческой практики. 
+                                Заказы на НИОКР.
+                        </td>
+                        <td>
+                                Социальные и благотворительные программы. 
+                                Социальное партнерство.                                 
+                        </td>
+                        <td>
+                                Социальные и благотворительные программы. 
+                                Социальное партнерство.                                 
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                                Экологические организации: Экологический фонд им. В.И. Вернадского и др.
+                        </td>
+                        <td>
+                                Охрана окружающей среды.
+                        </td>
+                        <td>
+                                Экологические экспедиции. 
+                                Проведение ОВОС. 
+                                Публичная отчетность.
                         </td>
                     </tr>
                 </tbody>
