--- a/src/views/mainPage.html
+++ b/src/views/mainPage.html
@@ -80,7 +80,7 @@
                                        <p><a href="/about"><img src="/img/2стрелки.png" alt=""></a></p> 
                 </div>
                 <div class="old">
-                        <img src="/img/ключ.png" alt=""><span> Данная платформа взаимодействия с заинтересованными сторонами является второй версией платформы, созданной в 2013 году. Первая версия платформы с материалами находится по <a class="ss-old" target="_blank" href="http://stakeholderpanel.ru/ru/index.html">ссылке</a></span>
+                        <img src="/img/ключ.png" alt=""><span> Данная платформа взаимодействия с заинтересованными сторонами является второй версией платформы, созданной в 2013 году. Первая версия платформы с материалами находится по <a class="ss-old" target="_blank" href="http://stakeholderpanel.ru/">ссылке</a></span>
                 </div>
         </div>
 </div>
