--- a/src/views/lkadmin.html
+++ b/src/views/lkadmin.html
@@ -57,12 +57,20 @@
                                         <input type="text" class="form-control" id="reportRevards" name="revards" placeholder="Введите награды отчета">
                                     </div>
                                     <div class="form-group">
-                                        <label for="pdfReport">Загрузите pdf отчета</label>
-                                        <input type="file" accept="application/pdf" class="form-control-file" id="pdfReport" name="pdf">
+                                        <label for="pdfReportfull">Загрузите pdf отчета на русском</label>
+                                        <input type="file" accept="application/pdf" class="form-control-file" id="pdfReportfull" name="pdf">
                                     </div>
                                     <div class="form-group">
-                                        <label for="pdfReportEng">Загрузите pdf отчета</label>
+                                        <label for="pdfReport">Загрузите сокращенную pdf отчета на русском</label>
+                                        <input type="file" accept="application/pdf" class="form-control-file" id="pdfReport" name="rusSmall">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="pdfReportEng">Загрузите pdf отчета на английском</label>
                                         <input type="file" accept="application/pdf" class="form-control-file" id="pdfReportEng" name="pdfEng">
+                                    </div>
+                                    <div class="form-group">
+                                            <label for="pdfReportEngSmall">Загрузите сокращенную pdf отчета на английском</label>
+                                            <input type="file" accept="application/pdf" class="form-control-file" id="pdfReportEngSmall" name="engSmall">
                                     </div>
                                     <div class="form-group">
                                         <label for="imgReport">Загрузите обложку отчета</label>
@@ -70,6 +78,7 @@
                                     </div>
                                     <button type="submit"  class="">Опубликовать</button>
                                   </form>
+                               
                         
                         </div>
                     
