--- a/src/views/reportPageItem.html
+++ b/src/views/reportPageItem.html
@@ -22,14 +22,20 @@
                           <br>
                     <div class="row justify-content-around">
                         <div class="mb-2"> 
+                             <img src="../../img/flag_rf.png">
                             <h6>
-                                <img src="../../img/allreport.png"><a href="/file/{{ report.pdfSrc }}"> Cкачать pdf отчета на русском</a>
+                               
+                                <img src="../../img/allreport.png"><a href="/file/{{ report.rusSmall }}"> Cкачать сокращенный отчет pdf на русском</a> <br>
+                                <img src="../../img/fullreport.png"><a href="/file/{{ report.pdfSrc }}"> Cкачать весь отчет pdf на русском</a>
                             </h6>
                         </div>
                         <div class="mb-2"> 
-                                <h6>
-                                    <img src="../../img/allreport.png"><a href="/file/{{ report.pdfEngSrc }}"> Cкачать pdf отчета на английском</a>
-                                </h6>
+                                        <img src="../../img/flag_ang.png">
+                                        <h6>
+                                          <img src="../../img/allreport.png"><a href="/file/{{ report.engSmall }}"> Cкачать сокращенный отчет pdf на английском</a><br>
+                                          <img src="../../img/fullreport.png"><a href="/file/{{ report.pdfEngSrc }}"> Cкачать весь отчет pdf на английском</a>
+                                            
+                                        </h6>
                         </div>
                     </div>
                   </div>
